# asuswrt-merlin.ng

./: .gitignore  COPYING.VPN  Changelog-3006.txt  Changelog-382.txt  Changelog-386.txt  Changelog-NG.txt  README-merlin.txt  README.TXT  README.md
release/src/router/bluez-5.41/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.obexd  Makefile.plugins  Makefile.tools  README  TODO  acinclude.m4  btchk.sh  btconfig_1.16  btconfig_4.02  configure.ac
release/src/router/bluez-5.41/android/: Android.mk  Makefile.am  a2dp-sink.c  a2dp-sink.h  a2dp.c  a2dp.h  audio-msg.h  avctp.c  avctp.h  avdtp.c  avdtp.h  avdtptest.c  avrcp-lib.c  avrcp-lib.h  avrcp.c  avrcp.h  bluetooth.c  bluetooth.h  bluetoothd-snoop.c  bluetoothd-wrapper.c  bluetoothd.te  bluetoothd_snoop.te  cts.txt  gatt.c  gatt.h  hal-a2dp-sink.c  hal-a2dp.c  hal-audio-aptx.c  hal-audio-sbc.c  hal-audio.c  hal-audio.h  hal-avrcp-ctrl.c  hal-avrcp.c  hal-bluetooth.c  hal-gatt.c  hal-handsfree-client.c  hal-handsfree.c  hal-health.c  hal-hidhost.c  hal-ipc-api.txt  (+87 more)
release/src/router/bluez-5.41/attrib/: att-database.h  att.c  att.h  gatt-service.c  gatt-service.h  gatt.c  gatt.h  gattrib.c  gattrib.h  gatttool.c  gatttool.h  interactive.c  utils.c
release/src/router/bluez-5.41/btio/: btio.c  btio.h
release/src/router/bluez-5.41/client/: agent.c  agent.h  display.c  display.h  gatt.c  gatt.h  main.c
release/src/router/bluez-5.41/doc/: adapter-api.txt  advertising-api.txt  agent-api.txt  alert-api.txt  assigned-numbers.txt  btmon.txt  btsnoop.txt  cyclingspeed-api.txt  device-api.txt  gatt-api.txt  (+15 more)
release/src/router/bluez-5.56/: AUTHORS  COPYING.LIB  ChangeLog  Makefile  Makefile.am  Makefile.mesh  Makefile.obexd  Makefile.plugins  Makefile.tools  README  TODO  acinclude.m4  autogen.sh  bccmd  btchk_uart.sh  btconfig_1.06  configure.ac  gatt-database.h
release/src/router/conntrack/: AUTHORS  INSTALL  Make_global.am  Makefile.am  Makefile.in  TODO  aclocal.m4  configure  configure.ac  conntrack.8  conntrackd.8  conntrackd.conf.5  nfct.8
release/src/router/coovachilli/: AUTHORS  COPYING  CREDITS  ChangeLog  LICENSE  Makefile.am  README  acsite.m4  configure.in
release/src/router/dbus-1.8.8/: AUTHORS  ChangeLog  ChangeLog.pre-1-0  ChangeLog.pre-1-2  Doxyfile.in  HACKING  Makefile.am  NEWS  README  autogen.sh  configure.ac  dbus-1-uninstalled.pc.in  dbus-1.pc.in
release/src/router/dropbear/: .gitignore  .hg_archival.txt  .hgignore  .hgsigs  .travis.yml  CHANGES  DEVELOPING.md  FUZZER-NOTES.md  INSTALL  INSTALL.md  LICENSE  MULTI.md  Makefile.in  README  README.md  SMALL  SMALL.md  agentfwd.h  algo.h  atomicio.h  auth.h  bignum.c  bignum.h  buffer.c  buffer.h  chachapoly.c  chachapoly.h  channel.h  chansession.h  circbuffer.c  circbuffer.h  cli-agentfwd.c  cli-auth.c  cli-authinteract.c  cli-authpasswd.c  cli-authpubkey.c  cli-chansession.c  cli-kex.c  cli-main.c  cli-runopts.c  (+120 more)
release/src/router/ebtables-2.0.11/: INSTALL  Makefile.am  configure.ac  ebtables-legacy.8.in  ebtables-restore.c  ebtables-save.in  ebtables.c  ebtablesd.c  ethertypes  libebtc.c  useful_functions.c
release/src/router/ethtool-6.2/: Makefile.am  Makefile.in  NEWS  aclocal.m4  amd8111e.c  at76c50x-usb.c  bnxt.c  cmis.c  cmis.h  common.c  common.h  configure  configure.ac  cpsw.c  de2104x.c  dsa.c  e100.c  e1000.c  et131x.c  ethtool-config.h.in  ethtool.8  ethtool.8.in  ethtool.c  ethtool.spec  ethtool.spec.in  fec.c  fec_8xx.c  fjes.c  fsl_enetc.c  ibm_emac.c  igb.c  igc.c  internal.h  ixgb.c  ixgbe.c  ixgbevf.c  json_print.c  json_print.h  json_writer.c  json_writer.h  (+24 more)
release/src/router/freeradius-server-3.0.0/: .gitattributes  .travis.yml  COPYRIGHT  CREDITS  INSTALL.rst  Make.inc.in  Makefile  README.rst  acinclude.m4  aclocal.m4  autogen.sh  config.guess  config.sub  configure.ac  main.mk
release/src/router/glib-2.59.0/: AUTHORS  CONTRIBUTING.md  HACKING  Makefile.am  NEWS  README.md  README.win32  autogen.sh  configure.ac  gio-2.0.pc.in  glib-2.0.pc.in  glib-gettextize.in  glib.doap  glib.mk  glib.supp  meson.build  meson_options.txt  sanity_check  template-tap.test.in  template.test.in
release/src/router/haveged/: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  config.h.in  configure  configure.ac
release/src/router/inadyn/: .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.md  ChangeLog.md  Dockerfile  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  configure  configure.ac  inadyn.service.in  indent.sh
release/src/router/libcap-ng/: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  autogen.sh  configure.ac  libcap-ng.spec
release/src/router/libconfuse/: .gitignore  AUTHORS  ChangeLog.md  INSTALL  LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  libconfuse.pc.in  libconfuse.spec  libconfuse.spec.in
release/src/router/libestr/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  libestr.pc.in
release/src/router/libexif/: .appveyor.yml  .cirrus.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README-Win32.txt  SECURITY.md  TODO  configure.ac  libexif.pc.in  libexif.spec.in
release/src/router/libfastjson/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README.html  aclocal.m4  arraylist.c  arraylist.h  atomic.h  config.h.in  configure  configure.ac  debug.c  debug.h  json.h  json_object.c  json_object.h  json_object_iterator.c  json_object_iterator.h  json_object_private.h  json_print.c  json_tokener.c  json_tokener.h  json_util.c  json_util.h  json_version.c  libfastjson.pc.in  printbuf.c  printbuf.h
release/src/router/libgcrypt-1.10.2/: AUTHORS  ChangeLog  ChangeLog-2011  LICENSES  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  acinclude.m4  aclocal.m4  autogen.rc  autogen.sh  config.h.in  configure  configure.ac
release/src/router/libgpg-error-1.47/: ABOUT-NLS  AUTHORS  ChangeLog  ChangeLog-2011  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  autogen.rc  autogen.sh  config.h.in  configure  configure.ac  libgpg-error.spec
(+98326 files in other folders)
